# H2H-Interrupt-Error-Impact-Lens

./: .gitmodules  README.md  setup.py
.devcontainer/: devcontainer.json
impactlens/: .gitignore  pyproject.toml
impactlens/.streamlit/: config.toml
impactlens/app/: dashboard.py  graph_viz.py  precomputed.py  requirements.txt  setup_for_cloud.py
impactlens/docs/: architecture.md  benchmarks.md  data_contract.md
impactlens/docs/precomputed/: commons_lang_analysis.json
impactlens/sample_repos/: README.md
impactlens/sample_repos/java_demo/: pom.xml
impactlens/sample_repos/java_demo/src/main/java/com/impactlens/demo/api/: CheckoutHandler.java
impactlens/sample_repos/java_demo/src/main/java/com/impactlens/demo/pricing/: DiscountCalculator.java  TaxCalculator.java
impactlens/sample_repos/java_demo/src/main/java/com/impactlens/demo/service/: OrderService.java
impactlens/scripts/: precompute_commons.py  setup_sample_repo.sh
impactlens/src/impactlens/: cli.py
impactlens/src/impactlens/adapters/java/: adapter.py  parser.py
impactlens/src/impactlens/ai/: confidence.py  justifier.py  llm_client.py
impactlens/src/impactlens/analysis/: impact.py
impactlens/src/impactlens/core/: adapter.py  diff.py  models.py  pipeline.py  registry.py
impactlens/src/impactlens/graph/: call_graph.py
impactlens/src/impactlens/mapping/: test_mapper.py
impactlens/src/impactlens/runner/: base.py  maven_runner.py
impactlens/tests/: test_ai.py  test_diff.py  test_impact.py  test_integration_day2.py  test_java_adapter.py  test_mapper.py  test_models.py  test_pipeline.py
(+10 files in other folders)
