[project]
name = "impactlens"
version = "0.1.0"
description = "Impact analysis and selective test execution for multi-language codebases"
requires-python = ">=3.10"
authors = [
    { name = "Team <TeamName>" }
]
dependencies = [
    "click>=8.1.0",
    "gitpython>=3.1.40",
    "networkx>=3.2",
    "tree-sitter>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
impactlens = "impactlens.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]